# tantabus

./: Cargo.toml  Makefile  README.md  trainer.py
.github/workflows/: tantabus.yml
datagen/: Cargo.toml
datagen/src/: analyzed_game.rs  apply_syzygy.rs  main.rs
datagen/src/extract_positions/: marlinformat.rs  mod.rs
datagen/src/game_gen/: chess_game.rs  game_gen.rs  mod.rs
engine/: Cargo.toml
engine/src/: eval.rs  lib.rs  time.rs
engine/src/eval/: eval.rs  eval_consts.rs  mob.rs  mod.rs  pst.rs  trace.rs
engine/src/nnue/: layers.rs  mod.rs  model.txt  ops.rs
engine/src/search/: cache.rs  formulas.rs  helpers.rs  history.rs  mod.rs  moves.rs  oracle.rs  params.rs  position.rs  search.rs  window.rs
engine/src/search/moves/: mod.rs  partition.rs  see.rs
fen-to-data/: Cargo.toml
fen-to-data/src/: analyze.rs  main.rs
network/: 2023-03-20-3b.json  2023-03-20-f1b.json  2023-03-21-all.json  dump_network.py
uci/: Cargo.toml
uci/src/: bench.rs  main.rs  options.rs
