[package]
name = "tantabus-datagen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantabus = { path = "../engine" }
bytemuck = { version = "1.10.0", features = ["derive"] }
cozy-chess = "0.3.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
clap = { version = "3.2.17", features = ["derive"] }
ctrlc = "3.2.2"
