[package]
name = "tantabus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cozy-chess = "0.3.0"
arrayvec = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
pdqsort = "1.0.3"
num-traits = "0.2"
bytemuck = "1.8.0"
