[package]
name = "tantabus-uci"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1"
tantabus = { path = "../engine" }
cozy-chess = { path = "../../cozy-chess/cozy-chess" }
vampirc-uci = { version = "0.11" }
