[package]
name = "tantabus-uci"
version = "0.1.0"
edition = "2021"
default-run = "tantabus-uci"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1"
tantabus = { path = "../engine" }
cozy-chess = "0.3.0"
vampirc-uci = { version = "0.11" }
